# urapi

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.rst  pyproject.toml
docker/: dev.Dockerfile  docker-compose-test.yaml  docker-compose.yaml  init_dev.py  logging.dev.ini
tests/: __init__.py  conftest.py  test_exceptions.py  test_serializer.py
tests/routers/: __init__.py  test_user.py
tests/utils/: __init__.py  test_crypto.py  test_logging.py  test_misc.py
urapi/: __init__.py  asgi.py  auth.py  deps.py  exceptions.py  serializer.py  settings.py  smtp.py
urapi/database/: __init__.py  models.py  repositories.py
urapi/routers/: __init__.py  user.py
urapi/schemas/: __init__.py  error.py  user.py
urapi/utils/: __init__.py  crypto.py  logging.py  misc.py
